--- a/Invitation/src/main/webapp/resources/css/blackRoom.css
+++ b/Invitation/src/main/webapp/resources/css/blackRoom.css
@@ -1,3 +1,27 @@
+@media (max-width: 768px){
+    #characterDisplay {
+        width: 250px;
+        height: 250px;
+        left: 20px;
+    }
+    
+    #dialogueBox {
+        height: 150px;
+        padding: 15px;
+    }
+    
+    .dialogue-text {
+        font-size: 14px;
+    }
+    
+    #choiceMenu {
+        width: 90%;
+    }
+    
+    .room-item {
+        transform: scale(0.7);
+    }
+}
 /* 대화형 RPG 스타일 */
 body {
     margin: 0;
@@ -20,6 +44,9 @@ body {
     width: 100%;
     height: calc(100% - 200px); /* 대화창 공간 확보 */
     overflow: hidden;
+    max-width: 1920px;
+    max-height: 1080px;
+    margin: 0 auto;
 }
 
 /* 배경 장면 */
@@ -324,10 +351,6 @@ body {
     font-size: 14px;
 }
 
-/* .inventory-item:hover {
-    background: rgba(80, 80, 80, 0.9);
-} */
-
 /* 어둠 효과 */
 #darkness {
     transform-style: preserve-3d;
@@ -355,7 +378,6 @@ body {
 }
 
 /* 방 아이템들 */
-/* 방 아이템들 - 이미지 기반 */
 .room-item {
     position: absolute;
     cursor: pointer;
@@ -363,15 +385,6 @@ body {
     z-index: 20;
     pointer-events: none;
     opacity: 0;
-    
-    /* 아이소메트릭 효과 */
-   /*  transform-style: preserve-3d;
-    transform: rotateX(60deg) rotateZ(-45deg);
-     */
-    /* 픽셀 아트 느낌 */
-   /*  image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges; */
 }
 
 /* 손전등이 켜졌을 때만 클릭 가능 */
@@ -385,42 +398,167 @@ body {
     object-fit: contain;
     display: block;
     
-    /* 픽셀 아트 렌더링 */
-    /* image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges; */
-    
     /* 그림자 효과 */
     filter: drop-shadow(4px 4px 8px rgba(0, 0, 0, 0.5));
 }
 
-/* .room-item:hover .item-image {
-    filter: 
-        drop-shadow(0 8px 16px rgba(255, 215, 0, 0.4))
-        brightness(1.0);
-} */
-
 #door {
-    top: 10%;
-    right: 100px;
-    width: 540px;
-    height: 600px;
+    top: 5vh;
+    right: 5vw;
+    width: 28vw;
+    height: 35vh;
+    max-width: 540px;
+    max-height: 600px;
+}
+
+#book {
+    bottom: 57vh;
+    left: 43vw;
+    width: 5vw;
+    height: 7vh;
+    max-width: 100px;
+    max-height: 130px;
+    z-index: 21;
 }
 
 #table {
-    bottom: 150px;
-    left: 40%;
-    width: 500px;
-    height: 400px;
+    bottom: 40vh;
+    left: 35vw;
+    width: 26vw;
+    height: 23vh;
+    max-width: 500px;
+    max-height: 400px;
 }
 
 #chair {
-    bottom: 150px;
-    left: 20%;
-    width: 300px;
-    height: 360px;
+    bottom: 35vh;
+    left: 15vw;
+    width: 15vw;
+    height: 21vh;
+    max-width: 300px;
+    max-height: 360px;
 }
 
+
+/* 작은 모바일 (480px 이하) */
+@media (max-width: 480px) {
+    #door {
+        top: 10vh;
+        right: 2vw;
+        width: 45vw;
+        height: 28vh;
+        max-width: 250px;
+        max-height: 300px;
+    }
+    
+    #book {
+        bottom: 50vh;
+        left: 38vw;
+        width: 12vw;
+        height: 8vh;
+        max-width: 50px;
+        max-height: 70px;
+        z-index: 21;
+    }
+    
+    #table {
+        bottom: 33vh;
+        left: 25vw;
+        width: 45vw;
+        height: 18vh;
+        max-width: 300px;
+        max-height: 200px;
+    }
+    
+    #chair {
+        bottom: 30vh;
+        left: 5vw;
+        width: 28vw;
+        height: 18vh;
+        max-width: 180px;
+        max-height: 200px;
+    }
+}
+
+/* 태블릿 대응 (769px ~ 1024px) */
+@media (min-width: 769px) and (max-width: 1024px) {
+    #door {
+        top: 6vh;
+        right: 4vw;
+        width: 32vw;
+        height: 33vh;
+        max-width: 450px;
+        max-height: 500px;
+    }
+    
+    #book {
+        bottom: 55vh;
+        left: 42vw;
+        width: 7vw;
+        height: 7.5vh;
+        max-width: 80px;
+        max-height: 100px;
+        z-index: 21;
+    }
+    
+    #table {
+        bottom: 38vh;
+        left: 33vw;
+        width: 30vw;
+        height: 22vh;
+        max-width: 450px;
+        max-height: 350px;
+    }
+    
+    #chair {
+        bottom: 34vh;
+        left: 13vw;
+        width: 18vw;
+        height: 20vh;
+        max-width: 250px;
+        max-height: 280px;
+    }
+}
+
+/* 가로 모드 모바일 */
+@media (max-width: 768px) and (orientation: landscape) {
+    #door {
+        top: 5vh;
+        right: 5vw;
+        width: 25vw;
+        height: 40vh;
+        max-width: 350px;
+        max-height: 400px;
+    }
+    
+    #book {
+        bottom: 48vh;
+        left: 42vw;
+        width: 6vw;
+        height: 10vh;
+        max-width: 70px;
+        max-height: 90px;
+        z-index: 21;
+    }
+    
+    #table {
+        bottom: 30vh;
+        left: 32vw;
+        width: 30vw;
+        height: 25vh;
+        max-width: 400px;
+        max-height: 300px;
+    }
+    
+    #chair {
+        bottom: 28vh;
+        left: 12vw;
+        width: 20vw;
+        height: 25vh;
+        max-width: 220px;
+        max-height: 260px;
+    }
+}
 
 /* 모달 스타일 */
 .modal-overlay {
