--- a/Invitation/src/main/webapp/resources/css/chooseCharacter.css
+++ b/Invitation/src/main/webapp/resources/css/chooseCharacter.css
@@ -235,3 +235,14 @@
         transform: translateY(0) scale(1);
     }
 }
+
+/* 모바일 세로 */
+@media screen and (max-width: 768px) {
+    #characterSelectScreen {
+        transform: scale(0.7);
+        transform-origin: center center;
+    }
+
+}
+
+
