유튜브 음악 저작권 문제 해결

--- a/Invitation/src/main/webapp/resources/css/christMas.css
+++ b/Invitation/src/main/webapp/resources/css/christMas.css
@@ -31,6 +31,7 @@ body {
     text-shadow: 0 0 5px #006837;
     position: relative;
     transform-origin: center top;
+    cursor: pointer;
 }
 
 .leaf {
